--- a/src/main/resources/.env
+++ b/src/main/resources/.env
@@ -1,4 +1,4 @@
-MONGO_DATABASE="movies-api-db"
+MONGO_DATABASE="movie-api-db"
 MONGO_USER="Api"
 MONGO_PASSWORD="GN9Ng2JoQQROqjvC@cluster0"
 MONGO_CLUSTER="grxasjj.mongodb.net"
